gcc/testsuite/rust/rustc/ui/generics/issue-80512-param-reordering-with-defaults_dg.rs
#![crate_type = "lib"]

struct S<T = (), 'a>(&'a T);
// { dg-error "" "" { target *-*-* } .-1 }

